<resources>
    <string name="app_name">Rater</string>
    <string name="login_text">Login</string>
    <string name="username_text_hint">Username</string>
    <string name="password_text_hint">Password</string>
    <string name="register_btn_text">Register</string>
    <string name="email_text_hint">E-Mail</string>
    <string name="birthyear_text_register">Birth Year</string>
    <string name="back_btn_text">Back</string>
    <string name="rights_text"><![CDATA[All rights reserved to Netanel & Slava]]></string>
</resources>
