<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="4dp"
    tools:context=".LoginScreen">


    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:src="@drawable/square"
        />
    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login_text"
        android:layout_below="@id/logo_login"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/username_et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_text_hint"
        android:layout_centerVertical="true"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/password_et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/username_et_login"
        android:hint="@string/password_text_hint"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/password_et_login"
        android:layout_centerHorizontal="true">
    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_btn_text"
        android:textAllCaps="false"
        />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rights_login"
        style="@style/customTextViewRights"
        android:text="@string/rights_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
