<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="4dp"
    tools:context=".RegisterScreen">


    <ImageView
        android:id="@+id/logo_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:src="@drawable/square"
        />

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register_btn_text"
        android:layout_below="@id/logo_register"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/username_et_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_text_hint"
        android:layout_centerVertical="true"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/password_et_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/username_et_register"
        android:hint="@string/password_text_hint"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/email_et_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/password_et_register"
        android:hint="@string/email_text_hint"
        android:textAlignment="center"/>
        <RadioGroup
            android:id="@+id/radio_btn_grp_register"
            android:layout_below="@id/email_et_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">
            <RadioButton
                android:id="@+id/male_radiobtn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:checked="false"/>
            <RadioButton
                android:id="@+id/female_radiobtn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:checked="false"/>

        </RadioGroup>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="4"
        android:hint="e.g. 1989"
        android:maxLength="4"
        android:layout_centerHorizontal="true"
        android:id="@+id/birthyear_register"
        android:layout_below="@+id/radio_btn_grp_register" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/birthyear_text"
        android:text="@string/birthyear_text_register"
        android:layout_toLeftOf="@id/birthyear_register"
        android:layout_below="@id/radio_btn_grp_register"
        android:textSize="18sp"
        android:layout_marginTop="12dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/birthyear_register"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/register_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_btn_text"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/backtologin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_btn_text"
            android:textAllCaps="false"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rights_register"
        android:text="@string/rights_text"
        style="@style/customTextViewRights"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>